[package]
name = "http-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version="0.11.13", features=["json"] }
tokio = { version="1.23.0", features=["full"]}
futures = "0.3.25"
parking_lot = "0.12.1"
lazy_static = "1.4.0"